[package]
name = "websession"
version = "0.8.3"
authors = ["Jeff Olhoeft <jolhoeft@gmail.com>", "Ben Stern <bas-github@bstern.org>"]
description = "Web Session Support for Rust"
license = "MIT/Apache-2.0"
repository = "https://github.com/jolhoeft/websession.rs/"
exclude = ["data/passwd.old"]

[dependencies]
hyper = { version = "0.10", optional = true }
pwhash = "^0.2"
uuid = { version = "0.6", features = [ "v4" ] }
libc = "0.2"
time = "0.1"
rust-crypto = "^0.2"
fs2 = "0.4"
log = "0.4"
clap = "2.27"
rpassword = "2.0"

[dev-dependencies]
tempdir = "0.3"
rand = "0.4"
bencher = "0.1"

[lib]
name = "websession"
path = "src/lib.rs"

[[bin]]
name = "ws_mgr"
path = "src/ws_mgr.rs"

[[bench]]
name = "benchmarks"
harness = false
