[package]
name = "websession"
version = "0.12.0"
authors = ["Jeff Olhoeft <jolhoeft@gmail.com>", "Ben Stern <bas-github@bstern.org>"]
description = "Web Session Support for Rust"
license = "MIT/Apache-2.0"
repository = "https://github.com/jolhoeft/websession.rs/"
edition = "2018"
exclude = ["data/passwd.old"]

[dependencies]
pwhash = "^0.3"
uuid = { version = "0.8", features = [ "v4" ] }
libc = "0.2"
fs2 = "0.4"
log = "0.4"
clap = "2.27"
rpassword = "5.0"
digest = "0.9"
sha2 = "0.9"

[dev-dependencies]
tempfile = "3.1"
rand = "0.7"
bencher = "0.1"

[lib]
name = "websession"
path = "src/lib.rs"

[[bin]]
name = "ws_mgr"
path = "src/ws_mgr.rs"

[[bin]]
name = "ws_simple"
path = "src/bin/simple.rs"

[[bench]]
name = "benchmarks"
harness = false
